# AtmoLin

./: .gitignore  AtmoLin.pro  CMakeLists.txt  README.md  atmolight.cpp  atmolight.h  ledarea.cpp  ledarea.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  systraymenu.cpp  systraymenu.h
.github/: build-win.yaml
.github/workflows/: build-win.yaml
modes/: abstractmode.cpp  abstractmode.h  flaschendrehen.cpp  flaschendrehen.h  individualfixedcolor.cpp  individualfixedcolor.h  onefixedcolor.cpp  onefixedcolor.h  remotedbus.cpp  remotedbus.h  worm.cpp  worm.h
